# ndi-capture

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  vcpkg.json
.github/workflows/: windows-ci.yml  windows-release.yml
LICENSE/: LICENSE  PROJECT-LICENSE.txt  QT-LICENSE-PLACEHOLDER.txt  THIRD-PARTY-NOTICES.md
THIRD-PARTY-NOTICES/: THIRD-PARTY-NOTICES.md
cmake/: FindNDI.cmake  Findlibjpeg-turbo.cmake  Findlibyuv.cmake
src/: CMakeLists.txt  CaptureSession.cpp  CaptureSession.h  DeviceEnumerator.cpp  DeviceEnumerator.h  FrameConverter.cpp  FrameConverter.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MjpegDecoder.cpp  MjpegDecoder.h  MutexGuard.cpp  MutexGuard.h  NdiSender.cpp  NdiSender.h  NdiSenderInterface.h  dshow_guids.h  main.cpp
